@@ -1,5 +1,6 @@
 2.5 - ?
 	- Hide NSFW images in diff viewer (unless NSFW warnings are disabled)
+	- Display related boards in recent posts tooltip op homepage
 
 2.4 - 2009-06-07
 	- Release search + browser + filters
